[workspace]
resolver = "2"
members = ["crates/*", "programs/*"]

[workspace.dependencies]
auto_impl = "1.2.0"
faucet = { path = "./programs/faucet" }
litesvm = { git = "https://github.com/0xcypher02/litesvm.git", rev = "ede37364d78f0ffde967d945f5d9cf914fe50bf9" }
solana-account-decoder = "2.2"
solana-client = "2.2"
solana-logger = "2.2"
solana-program = "2.2"
solana-sdk = "2.2"
spl-associated-token-account = "6.0.0"
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
